hphp/test/zend/bad/Zend/tests/closure_022.php.expectf
Catchable fatal error: Closure%s object cannot have properties in %sclosure_022.php on line 5